--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -26,6 +26,9 @@
                 <li class="page-scroll">
                     <a href="#contact">{{ with .Site.Params.contact.title }}{{ . }}{{ end }}</a>
                 </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
             </ul>
         </div>
         {{ "<!-- /.navbar-collapse -->" | safeHTML }}
