--- a/layouts/partials/portfolio-grid.html
+++ b/layouts/partials/portfolio-grid.html
@@ -17,6 +17,7 @@
                         </div>
                     </div>
                     <img src="img/portfolio/{{ .img }}" class="img-responsive">
+                    <span class="title">{{ .title }}</span>
                 </a>
             </div>
             {{ end }}
