--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,37 +1,40 @@
 {{ "<!-- Navigation -->" | safeHTML }}
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        {{ "<!-- Brand and toggle get grouped for better mobile display -->" | safeHTML }}
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#page-top">{{ with .Site.Params.navigation.brand }}{{ . }}{{ end }}</a>
-        </div>
-        {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#portfolio">{{ with .Site.Params.portfolio.title }}{{ . }}{{ end }}</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#about">{{ with .Site.Params.about.title }}{{ . }}{{ end }}</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#contact">{{ with .Site.Params.contact.title }}{{ . }}{{ end }}</a>
-                </li>
-                <li>
-                    <a href="">Blog</a>
-                </li>
-            </ul>
-        </div>
-        {{ "<!-- /.navbar-collapse -->" | safeHTML }}
+  <div class="container">
+    {{ "<!-- Brand and toggle get grouped for better mobile display -->" | safeHTML }}
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}#page-top">{{ with .Site.Params.navigation.brand }}{{ . }}{{ end }}</a>
     </div>
-    {{ "<!-- /.container-fluid -->" | safeHTML }}
+    {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="hidden">
+          <a href="{{ .Site.BaseURL }}#page-top"></a>
+        </li>
+        <li class="page-scroll">
+          <a href="{{ .Site.BaseURL }}#portfolio">{{ with .Site.Params.portfolio.title }}{{ . }}{{ end }}</a>
+        </li>
+        <li class="page-scroll">
+          <a href="{{ .Site.BaseURL }}#about">{{ with .Site.Params.about.title }}{{ . }}{{ end }}</a>
+        </li>
+        <li class="page-scroll">
+          <a href="{{ .Site.BaseURL }}#contact">{{ with .Site.Params.contact.title }}{{ . }}{{ end }}</a>
+        </li>
+          {{ $currentNode := . }}
+        {{ range .Site.Menus.main }}
+        <li>
+          <a class="sidebar-nav-item{{if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} active{{end}}" href="{{.URL}}">{{ .Name }}</a>
+          </li>
+        {{ end }}
+      </ul>
+    </div>
+    {{ "<!-- /.navbar-collapse -->" | safeHTML }}
+  </div>
+  {{ "<!-- /.container-fluid -->" | safeHTML }}
 </nav>
