--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -224,14 +224,30 @@ section.success a.active {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(24,188,156,.9);
+    background: rgba(24,188,156,1);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+#portfolio .portfolio-item .portfolio-link:hover .caption {
     opacity: 1;
+}
+
+#portfolio .portfolio-item .portfolio-link .title {
+    -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    transition: all ease .5s;
+
+    width: 100%;
+    display: block;
+    height: 30px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.1em;
+}
+#portfolio .portfolio-item .portfolio-link:hover {
+    text-decoration: none;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
@@ -460,4 +476,14 @@ footer .footer-below {
 .portfolio-modal .modal-backdrop {
     display: none;
     opacity: 0;
+}
+
+
+/* Blog*/
+
+#blog .media-left .image {
+    width: 128px;
+    height: 128px;
+    background-size: cover;
+    background-position: center center;
 }
