Added code hightlight

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,21 +1,23 @@
 {{ partial "_top.html" . }}
 <section id="blog">
   <div class="container">
-  <h1 class="title">Blog</h1>
-    <div class="media">
-
+    <h1 class="title">Blog</h1>
+    <ul class="media-list">
       {{ range .Data.Pages }}
-      <div class="media-left">
-        <div class="image" style="background-image: url({{ .Params.image }})"></div>
-      </div>
-      <div class="media-body">
-        <h3 class="media-heading"><a href="{{ .Permalink }}">{{ .Title }}</a>
-        </h3>
-        <h4>{{ .Date.Format "Mon, Jan 2, 2006" }}</h4>
-        {{.Summary}}
-      </div>
+      <hr/>
+      <li class="media">
+        {{if .Params.image}}
+        <div class="media-left">
+          <div class="image" style="background-image: url({{ .Params.image }})"></div>
+        </div>
+        {{ end }}
+        <div class="media-body">
+          <h3 class="media-heading"><a href="{{ .Permalink }}">{{ .Title }}</a> <small>{{ .Date.Format "Mon, Jan 2, 2006" }}</small></h3>
+          {{.Summary}}
+        </div>
+      </li>
       {{ end }}
-    </div>
+    </ul>
 
   </div>
 </section>
