--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -11,3 +11,6 @@
 <script src="{{ .Site.BaseURL }}js/contact_me.js"></script>
 {{ "<!-- Custom Theme JavaScript -->" | safeHTML }}
 <script src="{{ .Site.BaseURL }}js/freelancer.js"></script>
+{{ "<!-- Hightlight.js -->" | safeHTML }}
+<script src="{{ .Site.BaseURL }}js/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
