--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -487,3 +487,9 @@ footer .footer-below {
     background-size: cover;
     background-position: center center;
 }
+#blog .full-image {
+    width: 100%;
+    height: 230px;
+    background-size: cover;
+    background-position: center center;
+}
