--- a/layouts/partials/portfolio-grid.html
+++ b/layouts/partials/portfolio-grid.html
@@ -8,18 +8,20 @@
             </div>
         </div>
         <div class="row">
-            {{ range $.Site.Data.projects }}
+           {{ range .Site.Pages }}
+          {{ if eq .Type "project" }}
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal{{ .modalID }}" class="portfolio-link" data-toggle="modal">
+                <a href="{{.Permalink}}" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/{{ .img }}" class="img-responsive">
-                    <span class="title">{{ .title }}</span>
+                    <img src="img/portfolio/{{ .Params.img }}" class="img-responsive">
+                    <span class="title">{{ .Title }}</span>
                 </a>
             </div>
+            {{ end }}
             {{ end }}
         </div>
     </div>
