--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,7 +9,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}#page-top">{{ with .Site.Params.navigation.brand }}{{ . }}{{ end }}</a>
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}#page-top">
+        {{ with .Site.Params.navigation.brand }}{{ . }}{{ end }}
+      </a>
     </div>
     {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -26,12 +28,17 @@
         <li class="page-scroll">
           <a href="{{ .Site.BaseURL }}#contact">{{ with .Site.Params.contact.title }}{{ . }}{{ end }}</a>
         </li>
-          {{ $currentNode := . }}
+        {{ $currentNode := . }}
         {{ range .Site.Menus.main }}
+        {{ if eq .Identifier "blog"}}
         <li>
-          <a class="sidebar-nav-item{{if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} active{{end}}" href="{{.URL}}">{{ .Name }}</a>
-          </li>
+          <a class="sidebar-nav-item
+          {{if or ($currentNode.IsMenuCurrent " main" .) ($currentNode.HasMenuCurrent "main" .) }} active{{end}}"
+          href="{{.URL}}">{{ .Name }}</a>
+        </li>
         {{ end }}
+        {{ end }}
+
       </ul>
     </div>
     {{ "<!-- /.navbar-collapse -->" | safeHTML }}
