Removed highlight.js

--- a/layouts/partials/portfolio-grid.html
+++ b/layouts/partials/portfolio-grid.html
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                     <img src="img/portfolio/{{ .Params.img }}" class="img-responsive">
-                    <span class="title">{{ .Title }}</span>
+                    <h2 class="title">{{ .Title }}</h2>
                 </a>
             </div>
             {{ end }}
