--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,5 +20,4 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 {{ "<![endif]-->" | safeHTML }}
 
-{{ "<!-- Hightlight.js -->" | safeHTML }}
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/hightlight/default.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/hightlight/monokai.css">
