--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -482,17 +482,25 @@ footer .footer-below {
 
 /* Blog*/
 
-#blog .media-left .image {
+#blog .image {
     width: 128px;
     height: 128px;
+    margin: 0px 10px 0px 0;
     background-size: cover;
     background-position: center center;
+    border-radius: 5px;
 }
 #blog .full-image {
     width: 100%;
     height: 230px;
     background-size: cover;
     background-position: center center;
+}
+#blog .media-body {
+    line-height: 1.8em;
+}
+#blog .media-heading {
+    padding: 10px 0px;
 }
 
 /* Project */
