--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,9 +6,9 @@
       {{ range .Data.Pages }}
       <hr/>
       <li class="media">
-          <h3 class="media-heading"><a href="{{ .Permalink }}">{{ .Title }}</a>
-            <small>{{ .Date.Format "Mon, Jan 2, 2006" }}</small>
-          </h3>
+        <h3 class="media-heading"><a href="{{ .RelPermalink }}">{{ .Title }}</a>
+          <small>{{ .Date.Format "Mon, Jan 2, 2006" }}</small>
+        </h3>
         <div class="media-body">
           {{if .Params.image}}
           <div class="pull-left">
@@ -16,13 +16,13 @@
           </div>
           {{ end }}
           {{.Summary}}
-          <a href="{{ .Permalink }}" class="btn btn-success">Read More</a>
-
+          {{ if .Truncated }}
+          <a href="{{ .RelPermalink }}" class="btn btn-success">Read More</a>
+          {{ end }}
         </div>
       </li>
       {{ end }}
     </ul>
-
   </div>
 </section>
 
