--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,7 @@
 <link href="{{ .Site.BaseURL }}css/bootstrap.min.css" rel="stylesheet">
 {{ "<!-- Custom CSS -->" | safeHTML }}
 <link href="{{ .Site.BaseURL }}css/freelancer.css" rel="stylesheet">
+<link href="{{ .Site.BaseURL }}css/tables.css" rel="stylesheet">
 {{ "<!-- Custom Fonts -->" | safeHTML }}
 <link href="{{ .Site.BaseURL }}css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
