--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -503,6 +503,15 @@ footer .footer-below {
     padding: 10px 0px;
 }
 
+#blog .media-heading {
+    padding: 10px 0px;
+}
+
+#blog .post h2 {
+    font-size: 1.8em;
+    padding: 30px 0px 20px 0px;
+}
+
 /* Project */
 #project .ext-link {
     font-size: 1.8em
