--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,21 +1,27 @@
 {{ partial "_top.html" . }}
 <section id="blog">
   <div class="container">
-    <div class="post">
-       {{if .Params.image}}
-      <div class="full-image" style="background-image: url({{ .Site.BaseURL }}img/{{ .Params.image }})"></div>
-      {{ end }}
-      <h1 class="title">
-        {{ .Title }}
-        <small>{{ .Date.Format "Mon, Jan 2, 2006" }}</small>
-      </h1>
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="post">
+          {{if .Params.image}}
+          <div class="full-image" style="background-image: url({{ .Site.BaseURL }}img/{{ .Params.image }})"></div>
+          {{ end }}
+          <h1 class="title">
+            {{ .Title }}
+            <small>{{ .Date.Format "Mon, Jan 2, 2006" }}</small>
+          </h1>
 
-      <hr />
-      {{ .Content }}
+          <hr/>
+          {{ .Content }}
 
+        </div>
+        <hr/>
+        {{ partial "comments.html" . }}
+      </div>
+      <div class="col-md-1"></div>
     </div>
-    <hr />
-    {{ partial "comments.html" . }}
   </div>
 </section>
 
