--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,7 @@
 
         </div>
         <hr/>
-        {{ partial "comments.html" . }}
+        {{ template "_internal/disqus.html" . }}
       </div>
       <div class="col-md-1"></div>
     </div>
