--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -482,15 +482,7 @@ footer .footer-below {
 
 /* Blog*/
 
-#blog .image {
-    width: 128px;
-    height: 128px;
-    margin: 0px 10px 0px 0;
-    background-size: cover;
-    background-position: center center;
-    border-radius: 5px;
-}
-#blog .full-image {
+#blog .full-image, #blog .image {
     width: 100%;
     height: 230px;
     background-size: cover;
