--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -5,7 +5,9 @@
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h1 class="title">{{ .Title }}</h1>
         <hr class="star-primary">
-        <img src="{{ .Site.BaseURL }}img/portfolio/{{ .Params.img2 }}" class="img-responsive img-centered" alt="">
+        <a href="{{ .Params.link }}">
+          <img src="{{ .Site.BaseURL }}img/portfolio/{{ .Params.img2 }}" class="img-responsive img-centered" alt="">
+        </a>
 
         <div class="description">
           <p>{{ .Content }}</p>
