--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,13 +1,13 @@
 {{ "<!-- jQuery -->" | safeHTML }}
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/jquery-1.11.js"></script>
+<script src="{{ .Site.BaseURL }}js/jquery-1.11.js"></script>
 {{ "<!-- Bootstrap Core JavaScript -->" | safeHTML }}
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/bootstrap.js"></script>
+<script src="{{ .Site.BaseURL }}js/bootstrap.js"></script>
 {{ "<!-- Plugin JavaScript -->" | safeHTML }}
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/jquery.easing.min.js"></script>
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/classie.js"></script>
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/cbpAnimatedHeader.js"></script>
+<script src="{{ .Site.BaseURL }}js/jquery.easing.min.js"></script>
+<script src="{{ .Site.BaseURL }}js/classie.js"></script>
+<script src="{{ .Site.BaseURL }}js/cbpAnimatedHeader.js"></script>
 {{ "<!-- Contact Form JavaScript -->" | safeHTML }}
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/jqBootstrapValidation.js"></script>
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/contact_me.js"></script>
+<script src="{{ .Site.BaseURL }}js/jqBootstrapValidation.js"></script>
+<script src="{{ .Site.BaseURL }}js/contact_me.js"></script>
 {{ "<!-- Custom Theme JavaScript -->" | safeHTML }}
-<script data-cfasync="true" src="{{ .Site.BaseURL }}js/freelancer.js"></script>
+<script src="{{ .Site.BaseURL }}js/freelancer.js"></script>
